--- a/i18n/zh-Hant.json
+++ b/i18n/zh-Hant.json
@@ -50,7 +50,8 @@
 			"search": "檢索",
 			"add": "新增",
 			"edit": "修改",
-			"detail": "詳情"
+			"detail": "詳情",
+			"signup": "签到",
 			"delete": "刪除",
 			"batchDelete": "批量刪除",
 			"exportExcel": "導出 Excel",
