--- a/i18n/en.json
+++ b/i18n/en.json
@@ -50,7 +50,8 @@
 			"search": "Search",
 			"add": "Add",
 			"edit": "Edit",
-			"detail": "Detail"
+			"detail": "Detail",
+			"signup": "sign up",
 			"delete": "Delete",
 			"batchDelete": "Batch Delete",
 			"exportExcel": "Export Excel",
