--- a/i18n/zh-Hans.json
+++ b/i18n/zh-Hans.json
@@ -50,7 +50,8 @@
 			"search": "搜索",
 			"add": "新增",
 			"edit": "修改",
-			"detail": "详情"
+			"detail": "详情",
+			"signup":  "签到",
 			"delete": "删除",
 			"batchDelete": "批量删除",
 			"exportExcel": "导出 Excel",
