--- a/i18n/en.json
+++ b/i18n/en.json
@@ -99,8 +99,8 @@
 	},
 	"demo": {
 		"icons": {
-			"title": "Icons",
-			"describle": "Click icons to copy the icon code"
+			"title": "Hot events",
+			"describle": "Click to learn more"
 		},
 		"table": {
 			"title": "Table"
